# mpd_info_screen

./: Cargo.toml  LICENSE  README.md  build.rs
src/: debug_log.rs  display.rs  main.rs  mpd_handler.rs  signal.rs  unicode_support.rs
src/unicode_support/: fontconfig.rs  freetype.rs
