[package]
name = "mpd_info_screen"
version = "0.5.2"
edition = "2021"
description = "Displays info on currently playing music from an MPD daemon"
license = "MIT"
repository = "https://github.com/Stephen-Seo/mpd_info_screen"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
ggez = "0.9.3"
freetype = { version = "0.7", optional = true }
wgpu-types = "0.16"

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
unicode_support = ["dep:freetype", "dep:bindgen"]
