[package]
name = "mpd_info_screen"
version = "0.7.3"
edition = "2024"
description = "Displays info on currently playing music from an MPD daemon"
license = "MIT"
repository = "https://github.com/Stephen-Seo/mpd_info_screen"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
image = "0.25"
ggez = "0.10"
freetype = { version = "0.8", optional = true }
wgpu-types = "29.0.1"

#[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
unicode_support = ["dep:freetype", "dep:bindgen"]

[profile.release-with-debug]
inherits = "release"
debug = true
